# football-juggling

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.txt
src/: main.cpp
src/shaders/: color.frag  color.vert  render.frag  render.vert  texture.frag  texture.vert
